changed tech skils from grid to single pic

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -22,7 +22,7 @@
   <nav>
     <div class="nav-wrapper green accent-1">
       <a href="/" class="brand-logo center"><img id="logo" src="logo.png"></a>
-      <ul class="left hide-on-med-and-down">
+      <ul class="left">
           <li class="active"><a class="grey-text text-darken-3" href="/">Home</a></li>
           <li><a class="grey-text text-darken-3"href="portfolio">Portfolio</a></li>
           <li><a class="grey-text text-darken-3"href="contact">Contact</a></li>
@@ -131,7 +131,7 @@
 
 
           <!-- Grid for learned technologies -->
-          <div class="row">
+          <!-- <div class="row">
                  <div class="col s2">
                      <img class="tech" src="html5logo.png">
                  </div>
@@ -157,10 +157,10 @@
                   <img id="tech"src="mongodblogo.png">
               </div>
            </div>
-        </div>
+        </div> -->
 
         <!-- Non-Grid display for learned technologies -->
-          <!-- <h2 class="header">Graduating</h2>
+          <h2 class="header">Graduating</h2>
             <div class="row">
               <div class="col s6">
                 <img id="grad2" src="grad2.png">
@@ -174,7 +174,7 @@
                   industry standard technical skills.
                 </p>
               </div>
-            </div> -->
+            </div>
       </div>
     </div>
 
