--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -20,7 +20,7 @@
   <nav>
     <div class="nav-wrapper green accent-1">
       <a href="/" class="brand-logo center"><img id="logo" src="logo.png"></a>
-      <ul class="left hide-on-med-and-down">
+      <ul class="left">
         <li><a class="grey-text text-darken-3" href="/">Home</a></li>
         <li class="active"><a class="grey-text text-darken-3" href="portfolio">Portfolio</a></li>
         <li><a class="grey-text text-darken-3" href="contact">Contact</a></li>
@@ -82,12 +82,13 @@
   </div>
   <div class="section teal lighten-5">
     <div class="row container">
-      <h2 class="header">Group Projects</h2>
+      <h2 class="header">Projects/ Apps Developed</h2>
       <div class="row">
         <div class="col s12">
 
           <!-- Group Project #1 Card -->
-          <div class="card">
+          <div class="row">
+          <div class="card col s12 m6">
               <div class="card-image waves-effect waves-block waves-light">
                 <img class="activator" src="wearestillcool.gif">
               </div>
@@ -110,7 +111,7 @@
               </div>
             </div>
             <!-- Group Project #2 Card -->
-            <div class="card">
+            <div class="card col s12 m6">
                 <div class="card-image waves-effect waves-block waves-light">
                   <img class="activator" src="beerme.gif">
                 </div>
@@ -125,28 +126,11 @@
                       nearby that serves said beer</p>
                 </div>
               </div>
+              </div>
         </div>
       </div>
     </div>
   </div>
-  <!-- section for the we are still cool app -->
-  <!-- <div class="section white">
-    <div class="row container">
-      <h2 class="header">We Are Still Cool App</h2>
-
-      <div class="row">
-        <div class="col s12">
-          <a href="http://www.wearestillcool.com/" target="_blank"><img src="wearestillcool.gif"></a>
-        </div>
-        <div class="s6">
-          <p class="grey-text text-darken-3 lighten-3">
-
-          </p>
-        </div>
-      </div>
-    </div>
-  </div> -->
-
   <!-- Second Parallax Section -->
   <div id="block1" class="parallax-container">
     <div class="parallax"><img src="bg.jpg"></div>
@@ -157,8 +141,8 @@
   <div class="section teal lighten-5">
     <div class="row container">
       <h2 class="header">Javascript Games</h2>
-
-      <div class="card">
+<div class="row">
+      <div class="card col s12 m6">
         <div class="card-image waves-effect waves-block waves-light">
           <img class="activator" src="spaceballs.gif">
         </div>
@@ -171,27 +155,26 @@
           <p>This is another game from the class that I revisited. Adding animations and opacity tags and a general redesign from the original Technologies used: HTML, CSS, JavaScript, React, MongoDB, Passport.js</p>
         </div>
       </div>
-    </div>
-  </div>
 
-  <!-- <div class="section white">
-    <div class="row container">
-      <h2 class="header">Beer Me App</h2>
-
-      <div class="row">
-        <div class="col s12">
-          <img src="beerme.gif">
+      <div class="card col s12 m6">
+        <div class="card-image waves-effect waves-block waves-light">
+          <img class="activator" src="hangman.gif">
         </div>
-        <div class="s6">
-          <p class="grey-text text-darken-3 lighten-3">
-            This was our first group project. This is a fun social app that uses facial
-            recognition to suggest a beer based on detected emotion and suggests a brewery
-            nearby that serves said beer
-          </p>
+        <div class="card-content">
+          <span class="card-title activator grey-text text-darken-4">Futurama Hangman<i class="material-icons right">more_vert</i></span>
+          <p><a href="#">Futurama Hangman</a></p>
+        </div>
+        <div class="card-reveal">
+          <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+          <p>   This is a short game that we did early on in the course which I revisited
+            to add the Bender hangman animation .
+
+            Technologies Used: with HTML5, CSS, Javascript and JQuery.</p>
         </div>
       </div>
+</div>
     </div>
-  </div> -->
+  </div>
 
   <!-- Third Parallax Section -->
   <div id="block1" class="parallax-container">
