change nav hide option

--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -20,7 +20,7 @@
   <nav>
     <div class="nav-wrapper green accent-1">
       <a href="/" class="brand-logo center"><img id="logo" src="logo.png"></a>
-      <ul class="left">
+      <ul class="left hide-on-small-and-down">
         <li><a class="grey-text text-darken-3" href="/">Home</a></li>
         <li class="active"><a class="grey-text text-darken-3" href="portfolio">Portfolio</a></li>
         <li><a class="grey-text text-darken-3" href="contact">Contact</a></li>
