--- a/views/resume.ejs
+++ b/views/resume.ejs
@@ -17,7 +17,7 @@
     <nav>
         <div class="nav-wrapper green accent-1">
           <a href="/" class="brand-logo center"><img id= "logo"src="logo.png"></a>
-          <ul class="left hide-on-med-and-down">
+          <ul class="left hide-on-small-and-down">
             <li><a class="grey-text text-darken-3"href="/">Home</a></li>
             <li><a class="grey-text text-darken-3" href="portfolio">Portfolio</a></li>
             <!-- <li><a class="grey-text text-darken-3"href="about">About</a></li> -->
