place contact and resume on right side of nav bar

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -21,6 +21,8 @@
             <li><a class="grey-text text-darken-3"href="/">Home</a></li>
             <li><a class="grey-text text-darken-3" href="portfolio">Portfolio</a></li>
             <!-- <li><a class="grey-text text-darken-3"href="about">About</a></li> -->
+          </ul>
+          <ul class="right hide-on-small-and-down">
             <li class="active"><a class="grey-text text-darken-3"href="contact">Contact</a></li>
             <li><a class="grey-text text-darken-3"href="resume">Resume</a></li>
           </ul>
