--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -23,6 +23,8 @@
       <ul class="left hide-on-small-and-down">
         <li><a class="grey-text text-darken-3" href="/">Home</a></li>
         <li class="active"><a class="grey-text text-darken-3" href="portfolio">Portfolio</a></li>
+      </ul>
+        <ul class="right hide-on-small-and-down">
         <li><a class="grey-text text-darken-3" href="contact">Contact</a></li>
         <li><a class="grey-text text-darken-3" href="resume">Resume</a></li>
       </ul>
