--- a/views/resume.ejs
+++ b/views/resume.ejs
@@ -15,12 +15,14 @@
 </head>
 <body>
     <nav>
-        <div class="nav-wrapper green accent-2">
+        <div class="nav-wrapper green accent-1">
           <a href="/" class="brand-logo center"><img id= "logo"src="logo.png"></a>
           <ul class="left hide-on-small-and-down">
             <li><a class="grey-text text-darken-3"href="/">Home</a></li>
             <li><a class="grey-text text-darken-3" href="portfolio">Portfolio</a></li>
             <!-- <li><a class="grey-text text-darken-3"href="about">About</a></li> -->
+          </ul>
+          <ul class="right hide-on-small-and-down">
             <li><a class="grey-text text-darken-3"href="contact">Contact</a></li>
             <li class="active"><a class="grey-text text-darken-3"href="resume">Resume</a></li>
           </ul>
