add wearestillcool headers

--- a/public/styles.css
+++ b/public/styles.css
@@ -46,3 +46,11 @@
   margin-left: 200px;
   margin-top: 50px;
 }
+
+.wasc-header{
+  font-family: 'Amatic SC', cursive;
+}
+
+.wasc-subheader{
+  font-family: 'Gloria Hallelujah', cursive;
+}
