--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Gloria+Hallelujah" rel="stylesheet">
   <meta name="google-site-verification" content="yy7qgtwyIga6CKVPJcl_ESmGidnjRII4IKxVFOwa-ho" />
   <title>Tyler J. Sweeney Portfolio</title>
   <link rel="stylesheet" type="text/css" href="reset.css">
