--- a/views/wearestillcool.ejs
+++ b/views/wearestillcool.ejs
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Tyler J. Sweeney Portfolio</title>
+  <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Gloria+Hallelujah" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="reset.css">
   <link rel="stylesheet" href="./styles.css" type="text/css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -58,7 +59,8 @@
   </div>
   <div class="section teal lighten-5">
     <div class="row container">
-      <h2 class="header">Projects/ Apps Developed</h2>
+      <h1 class="wasc-header center">We Are Still Cool</h1>
+      <h4 class="wasc-subheader center">A social media web app for parents</h4>
       <div class="row">
         <div class="col s12">
 
