--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,7 +23,7 @@
   <nav>
     <div class="nav-wrapper green accent-1">
       <a href="/" class="brand-logo center"><img id="logo" src="logo.png"></a>
-      <ul class="left">
+      <ul class="left hide-on-small-and-down">
           <li class="active"><a class="grey-text text-darken-3" href="/">Home</a></li>
           <li><a class="grey-text text-darken-3"href="portfolio">Portfolio</a></li>
       </ul>
