--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -96,7 +96,7 @@
               </div>
               <div class="card-content">
                 <span class="card-title activator grey-text text-darken-4">We Are Still Cool<i class="material-icons right">more_vert</i></span>
-                <p><a href="http://www.wearestillcool.com/">We Are Still Cool</a></p>
+                <p><a href="wearestillcool/">We Are Still Cool</a></p>
               </div>
               <div class="card-reveal">
                 <span class="card-title grey-text text-darken-4">We Are Still Cool<i class="material-icons right">close</i></span>
@@ -188,7 +188,7 @@
       <h2 class="header">Database Applications</h2>
 
       <!-- Database Card -->
-      <div class="card">
+      <div class="card col s6 offset-s3">
           <div class="card-image waves-effect waves-block waves-light">
             <img class="activator" src="traintime.gif">
           </div>
