--- a/views/wearestillcool.ejs
+++ b/views/wearestillcool.ejs
@@ -17,7 +17,7 @@
   <script src="scripts.js"></script>
 </head>
 
-<body>
+<body>]
   <nav>
     <div class="nav-wrapper green accent-1">
       <a href="/" class="brand-logo center"><img id="logo" src="logo.png"></a>
@@ -31,6 +31,8 @@
       </ul>
     </div>
   </nav>
+
+
   <!-- Element Showed -->
   <!-- need to make it obvious that this  -->
   <div class="fixed-action-btn direction-top active" style="bottom: 45px; right: 24px;">
